src/components/oneProduct/OneProduct.module.css
.rootWithoutDescr {
    display: grid;
    grid-template-rows: calc(283px + 24px) 124px;
    row-gap: 5px;
    min-width: 320px;
    height: 436px;
    padding: 16px;
    border: 1px solid #FFFFFF;

    transition: opacity 3s ease;
}

.rootWithoutDescr:hover .photoButtons{
    display: flex;
}
.rootDescr:hover .photoButtons{
    display: flex;
}

.rootDescr {
    min-width: 320px;
    height: 436px;
    padding: 16px;
    border: 1px solid #FFFFFF;

    transition: opacity 1s ease;
}

.main {
    display: grid;
    grid-template-rows: 24px auto;
    row-gap: 5px;
}

.header {
    width: max-content;
    display: flex;
    align-items: center; /* todo не по центру */
    justify-items: center;
    gap: 4px;
    border-radius: 4px;
    background-color: #fff;
    padding: 2px 4px;
}

.sale {
    color: #3625FF;
}

.productPhoto {
    display: grid;
    height: 270px;
    grid-template-rows: 255px 10px;
    row-gap: 5px;
    width: 100%;
    align-self: center;
    justify-self: center;
}

.productPhoto img {
    display: grid;
    justify-self: center;
    align-self: center;
    max-height: 260px;
    width: 100%;
    object-fit: contain;

    transition: all 1s linear;
}

.photoButtons {
    display: none;
    justify-self: center;
    gap: 13px;
    height: 8px;

    position: relative;
    transition: all 1s linear;

}

.onePhotoButtonNotActive {
    background-color: transparent;
    color: #FFFFFF;
}
.onePhotoButtonActive {
    background-color: transparent;
    color: #5C6970;
}

.infoWithDescr {
    height: 436px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: stretch;
}

.infoWithoutDescr {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-items: center;
    gap: 8px;
}

.productName {
    height: 16px;
    display: grid;
    align-content: center;
}

.aboutProductFull {
    font-weight: 500;
    font-size: 0.9em;
    line-height: 1.4em;
    margin: 0;
}

.aboutProductShort {
    font-weight: 500;
    font-size: 0.9em;
    height: 36px;
    margin: 0;
    color: #5C6970;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    text-overflow: ellipsis;
}

.idkWhatIsiT {
    height: 20px;
    display: flex;
    padding: 2px 4px;
    gap: 4px;

    background-color: #fff;
    border-radius: 4px;
    width: max-content;
}

.shortInfo {
    display: grid;
    row-gap: 4px;
}

.grid {
    display: grid;
    max-height: 36px;
    margin: 0;
}

p {
    display: grid;
    align-content: center;
    font-size: 0.9em;
    font-weight: 500;
    word-spacing: 1px;
    color: #5C6970;
}

.grid1 {
    height: 36px;
    display: grid;
    grid-area: text;
    overflow: hidden;
}

.grid2 {
    display: grid;
    grid-area: text2;
}

.grid3 {
    position: relative;
    display: grid;
    justify-self: end;
    margin-left: 3px;
}

.readMore {
    width: max-content;
    color: #3625FF;
    background-color: transparent;
}

.gridButton {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    top: 23px;
    width: 70px;
}

.price {
    display: flex;
    gap: 8px;
    height: 24px;
    align-items: center;
}

.buttonAddToCart {
    height: 24px;
    display: flex;
    gap: 4px;
    justify-items: center;
    align-items: center;


    padding: 0 8px 0 4px;
    border-radius: 4px;
    background-color: #3625FF;
    color: white;
    transition: all 0.2s ease-in-out;
}

.buttonAddToCart:hover {
    background-color: #0C0099;
    transition: all 0.2s ease-in-out;
}

.priceWithoutSale {
    color: #5C6970;
    text-decoration: line-through;
}

.buttonAddedToCart {
    background-color: #FFFFFF;
    color: #3625FF;
}

.buttonAddedToCart:hover {
    background-color: #FFFFFF;
    color: #3625FF;
}

